styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');

body {
  font-family: 'Lato', sans-serif;
  font-size: 14px;
}

.content-wrapper {
  max-width: 1100px;
  padding: 10px;
  margin: 0 auto;
}

.header-content {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
  margin-bottom: 20px;
}

.header-content .logo {
  color: black;
  font-weight: 800;
  text-decoration: none;
  font-size: 1.6em;
}

.header-content .nav-item {
  margin-left: 10px;
  margin-right: 10px;
  font-size: 1em;
  text-decoration: none;
  color: black;
}

.header-content .nav-number {
  margin-left: 30px;
  font-weight: bold;
  font-size: 1em;
}

.hero-section {
  background-color: #484848;
}

.hero-content {
  margin: 100px 300px;
  color: white;
}

.hero-content .hero-title {
  font-weight: 800;
  font-size: 4em;
  text-align: center;
  margin-bottom: 50px;
}

.hero-content .hero-paragraph {
  font-size: 1.4em;
  font-weight: 300;
  line-height: 30px;
  text-align: center;
}

.features-section {
  background-color: #eeeeee;
}

.features-content {
  margin-top: 80px;
  margin-bottom: 80px;
  display: flex;
  justify-content: space-between;
}

.features-content .feature-item {
  text-align: center;
  width: 22%;
}

.features-content .feature-item .far.fa-comment-alt {
  background-color: #3498db;
  padding: 40px;
  border-radius: 60px;
  font-size: 2em;
  color: white;
  margin-bottom: 30px;
}

.features-content .feature-item .features-subtitle {
  font-size: 1.5em;
  font-weight: 700;
  color: #3498db;
  margin-bottom: 30px;
}

.features-content .feature-item .item-text {
  text-align: justify;
  font-size: 1em;
}

.showcase-section {
  background-color: #e5e5e5;
}

.showcase-content {
  display: flex;
  justify-content: space-between;
  margin-top: 80px;
  margin-bottom: 80px;
}

.showcase-content .showcase-text {
  width: 450px;
}

.showcase-content p:first-child {
  font-size: 1em;
  margin-bottom: 40px;
}

.showcase-content h2 {
  font-size: 3em;
  font-weight: 800;
  margin-bottom: 40px;
}

.showcase-content .showcase-text .showcase-paragraph {
  font-size: 1.2em;
  line-height: 25px;
  margin-bottom: 45px;
}

.showcase-content .showcase-text .showcase-button {
  text-decoration: none;
  color: black;
  font-weight: 700;
  background-color: #f5f5f5;
  padding: 10px 60px;
}

.showcase-content .laptop-image {
  width: 500px;
}

.product-container {
  display: flex;
  margin-bottom: 80px;
}

.product {
  width: 33%;
  height: 200px;
  padding: 30px;
  text-align: center;
}

.product .product-description {
  font-size: 1em;
  font-weight: 700;
  margin-bottom: 10px;
}

.product .product-title {
  font-size: 2.2em;
  font-weight: 800;
}

.product.product-1,
.product.product-2 {
  background-color: white;
}

.product.product-3 {
  background-color: black;
  color: white;
}

.news-section {
  background-color: #eeeeee;
}

.news-content {
  display: flex;
  justify-content: space-between;
  margin-top: 80px;
  margin-bottom: 80px;
}

.news-content .new {
  width: 32%;
}

.news-content .new .new-type {
  font-size: 1.2em;
  font-weight: 800;
  margin-right: 30px;
}

.news-content .new a {
  font-size: 1em;
  text-decoration: none;
  color: black;
}
.news-content .new hr {
  border: 2px solid white;
  width: 15%;
  margin: 15px 0 25px;
}

.news-content .new .new-box {
  background-color: white;
}

.news-content .new .new-box .new-image {
  height: 150px;
  display: flex;
  align-items: flex-end;
  background-color: #666666;
  margin-bottom: 20px;
}

.news-content .new .new-box .new-image .new-date {
  background-color: #878787;
  color: white;
  padding: 5px 25px;
  font-size: 1em;
}

.news-content .new .new-box .new-title {
  color: #67b2e4;
  font-size: 1.2em;
  font-weight: 800;
  margin-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
}

.news-content .new .new-box .new-text {
  font-size: 1em;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
  text-align: justify;
  padding-bottom: 20px;
}

.footer-section {
  background-color: #c9c9c9;
}

.footer-content {
  display: flex;
  justify-content: space-between;
  margin-top: 50px;
  margin-bottom: 80px;
}

.footer-content .side-footer {
  display: flex;
}

.footer-content .links {
  display: flex;
  flex-direction: column;
  margin-left: 100px;
}

.footer-content .company-name {
  font-weight: 700;
  font-size: 1.2em;
  margin-bottom: 30px;
}

.footer-content .company-direction,
.footer-content .company-firm {
  color: #626262;
  font-size: 1em;
  margin-bottom: 25px;
  line-height: 16px;
}

.footer-content .links a {
  text-decoration: none;
  color: #626262;
  margin-bottom: 10px;
}

.footer-content .form p:first-child {
  font-weight: 700;
  font-size: 1em;
  margin-bottom: 15px;
}

.footer-content .form input {
  border: none;
  height: 1.6em;
  margin-bottom: 25px;
}

.footer-content .form a {
  text-decoration: none;
  font-size: 1em;
  color: white;
  font-weight: 700;
  background-color: #626262;
  padding: 5px 10px;
  margin-left: 10px;
}

.footer-content .form p:last-of-type {
  font-size: 1em;
  font-weight: 700;
  margin-bottom: 15px;
}

.footer-content .form .button-container {
  display: flex;
  width: 150px;
  justify-content: space-between;
}

.footer-content .form .follow-button {
  height: 30px;
  width: 30px;
  background-color: white;
}

